# DaSH-Lab-Assignment-2024

./: README.md  client.py  output.json  server.py
Development Assignment/: Development_Assignment_lvl1.py  initialise_server_and_clients.sh  output1.json  output2.json  output3.json  requirements.txt
Federate Learning Assignment/fl-assignment/: README.md  pyproject.toml
Federate Learning Assignment/fl-assignment/fl_assignment/: __init__.py  a.out  client_app.py  server_app.py  task.py  test.cpp
