[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-assignment"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.9.0,<2.0",
    "flwr-datasets[vision]>=0.0.2,<1.0.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "garam_icecream"

[tool.flwr.app.components]
serverapp = "fl_assignment.server_app:app"
clientapp = "fl_assignment.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
